--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -28,8 +28,14 @@
           >
             <a class="nav-link" href="{% url 'about' %}">About</a>
           </li>
-          <li class="nav-item mr-3">
-            <a class="nav-link" href="{% url 'index' %}">Recipes</a>
+          <li 
+          {% if 'recipes' in request.path %}
+          class="nav-item active mr-3"
+          {% else %}
+          class="nav-item mr-3"
+          {% endif %}
+          >
+            <a class="nav-link" href="{% url 'recipes' %}">Recipes</a>
           </li>
         </ul>
 
