--- a/templates/recipes/search.html
+++ b/templates/recipes/search.html
@@ -1,1 +1,112 @@
-<h1>Search</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+<section id="showcase-inner" class="showcase-search text-white py-5">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-12">
+          <form action="{% url 'search' %}">
+            <!-- Form Row 1 -->
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                  <label class="sr-only">Keywords</label>
+                  <input type="text" name="keywords" class="form-control" placeholder="Keyword (eggs, milk, etc)">
+                </div>
+
+                <div class="col-md-4 mb-3">
+                    <label class="sr-only">Meal</label>
+                    <select name="meal" class="form-control">
+                      <option selected="true" disabled="disabled">Meal (All)</option>
+                      <option>Breakfast</option>
+                      <option>Main Course</option>
+                      <option>Desserts</option>
+                      <option>Salads</option>
+                      <option>Drinks</option>
+                    </select>
+                  </div>
+                </div>
+            <!-- Form Row 2 -->
+            <div class="form-row">
+                <div class="col-md-6 mb-3">
+                  <label class="sr-only">Diet</label>
+                  <select name="diet" class="form-control">
+                    <option selected="true" disabled="disabled">Special Diet (All)</option>
+                    <option>Vegetarian</option>
+                    <option>Non-Vegetarian</option>
+                    <option>Vegan</option>
+                    <option>Gluten-Free</option>
+                  </select>
+                </div>
+              </div>
+              <button class="btn btn-secondary btn-block mt-4" type="submit">Submit Search</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Breadcrumb -->
+  <section id="bc" class="mt-3">
+    <div class="container">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="{% url 'index' %}">
+              <i class="fas fa-home"></i> Home</a>
+          </li>
+          <li class="breadcrumb-item">
+            <a href="{% url 'recipes' %}">Follow Our Recipes</a>
+          </li>
+          <li class="breadcrumb-item active"> Search Results</li>
+        </ol>
+      </nav>
+    </div>
+  </section>
+
+
+  <!-- Recipes -->
+  <section id="recipes" class="py-4">
+    <div class="container">
+      <div class="row">
+        {% if recipes %}
+        {% for recipe in recipes %}
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card recipe-preview">
+            <img class="card-img-top" src="{{ recipe.photo_main.url }}" alt="">
+            <div class="card-body">
+              <div class="recipe-heading text-center">
+                <h4 class="text-primary">{{ recipe.title }}</h4>     
+                <p>{{ recipe.Mealtype }}-{{ recipe.Specialdiet }}</p>
+              </div>
+              <hr>
+            <div class="row py-2 text-secondary">
+              <div class="col-6">
+                <i class="fas fa-clock"></i> PrepTime: {{ recipe.preptime }}</div>
+              <div class="col-6">
+                <i class="fas fa-clock"></i> TotalTime: {{ recipe.totaltime }}</div>
+            </div>
+            <hr>
+            <div class="row py-2 text-secondary">
+              <div class="col-12">
+                Click Below for recipe!</div>
+            </div>
+              <div class="row text-secondary pb-2">
+                <div class="col-6">
+                  <i class="fas fa-user"></i> Recipe by: {{ recipe.employer }}</div>
+              </div>
+              <hr>
+                <a href="{% url 'recipe' recipe.id %}" class="btn btn-primary btn-block">More Info</a>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      {% else %}
+        <div class="col-md-12">
+          <p>No Recipes Available</p>
+        </div>
+      {% endif %}
+      </div>
+    </div>
+  </section>
+  {% endblock %}
