--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -53,6 +53,9 @@
     </div>
   </section>
 
+  <!--Alerts-->
+  {% include 'partials/_alerts.html' %}
+
   <!-- Recipes -->
   <section id="recipes" class="py-4">
     <div class="container">
