--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -3,7 +3,7 @@
 
 {% block branding %}
     <h1 id="head">
-        <img src="{% static 'img/logo1.png' %}" alt="BF Food Blog" 
+        <img src="{% static 'img/logo.png' %}" alt="BF Food Blog" 
         height="50" width="50" class="brand_img"> Admin Area
     </h1>
 {% endblock %}
