--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -1,7 +1,7 @@
 {% if messages %}
     {% for message in messages %}
         <div id="message" class="container">
-            <div class="alert alert-{{ message.tags }}" role="alert">
+            <div class="alert alert-{{ message.tags }} alert-dismissible text-center" role="alert">
                 <strong>
                     {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
                         Error
